Se actualiza el nombre de la pagina en el index

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <header class="header">
-      <h1>📄 Lector de Archivos Pilares Computing</h1>
+      <h1>📄 Lector de Archivos: PilaresJS Lab</h1>
       <p>Selecciona o arrastra cualquier archivo para verlo aquí</p>
     </header>
 
